[package]
name = "tokio-tun"
version = "0.7.0"
authors = ["Navid <yaa110@gmail.com>"]
edition = "2021"
homepage = "https://github.com/yaa110/tokio-tun"
repository = "https://github.com/yaa110/tokio-tun"
documentation = "https://docs.rs/tokio-tun"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Asynchronous allocation of TUN/TAP devices using tokio"
categories = ["asynchronous", "network-programming"]
keywords = ["tun", "tap", "async", "tokio"]

[dependencies]
tokio = { version = "1", features = ["net", "rt"] }
libc = "0.2"
nix = { version = "0.25", default-features = false, features = ["ioctl"] }

[target.'cfg(windows)'.dependencies]
lazy_static = "1"
log = "0.4"
widestring = "1"
socket2 = { version = "0.4.2", features = ["all"] }
windows-sys = { version = "0.45.0", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Networking_WinSock",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
]}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
